--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-tensorflow
-numpy<2.0
-opencv-python-headless>=4.9.0.80
-streamlit-drawable-canvas
-
+streamlit==1.32.0
+tensorflow-cpu==2.15.0
+numpy==1.26.4
+opencv-python-headless==4.9.0.80
+streamlit-drawable-canvas==0.9.3
+protobuf==3.20.3
