--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.32.0
+streamlit
 tensorflow-cpu==2.15.0
-numpy==1.26.4
-opencv-python-headless==4.9.0.80
+numpy<2.0
+opencv-python-headless
 streamlit-drawable-canvas==0.9.3
 protobuf==3.20.3
